# simple_compiler

./: .gitignore  CMakeLists.txt  README.md
src/: evaluator.cpp  evaluator.hpp  io.cpp  io.hpp  lexer.cpp  main.cpp  syntax_kind.hpp  syntax_token.cpp  syntax_tree.hpp
src/binding/: bind_node.cpp  bind_node.hpp  binder.cpp  binder.hpp  bound_assignment_expression.cpp  bound_assignment_expression.hpp  bound_binary_expression.cpp  bound_binary_expression.hpp  bound_binary_operator.cpp  bound_binary_operator.hpp  bound_block_statement.cpp  bound_block_statement.hpp  bound_expression_statement.cpp  bound_expression_statement.hpp  bound_for_statement.cpp  bound_for_statement.hpp  bound_global_scope.cpp  bound_global_scope.hpp  bound_if_statement.cpp  bound_if_statement.hpp  bound_literal_expression.cpp  bound_literal_expression.hpp  bound_scope.cpp  bound_scope.hpp  bound_unary_expression.cpp  bound_unary_expression.hpp  bound_unary_operator.cpp  bound_unary_operator.hpp  bound_variable_declaration.cpp  bound_variable_declaration.hpp  bound_variable_expression.cpp  bound_variable_expression.hpp  bound_while_statement.cpp  bound_while_statement.hpp
src/compilation/: compilation.cpp  compilation.hpp
src/diagnostics/: diagnostics.cpp  diagnostics.hpp  diagnostics_bag.cpp  diagnostics_bag.hpp  text_span.cpp  text_span.hpp
src/evaluation/: evaluation_result.cpp  evaluation_result.hpp  evaluator.cpp  evaluator.hpp
src/syntax/: assignment_expression_syntax.cpp  assignment_expression_syntax.hpp  binary_expression_syntax.cpp  binary_expression_syntax.hpp  block_statement_syntax.cpp  block_statement_syntax.hpp  close_brace_syntax.cpp  close_brace_syntax.hpp  close_parenthesis_syntax.cpp  close_parenthesis_syntax.hpp  compilation_unit_syntax.cpp  compilation_unit_syntax.hpp  expression_statement_syntax.cpp  expression_statement_syntax.hpp  for_statement_syntax.cpp  for_statement_syntax.hpp  identifier_syntax.cpp  identifier_syntax.hpp  if_statement_syntax.cpp  if_statement_syntax.hpp  lexer.cpp  lexer.hpp  literal_expression_syntax.cpp  literal_expression_syntax.hpp  name_expression_syntax.cpp  name_expression_syntax.hpp  open_brace_syntax.cpp  open_brace_syntax.hpp  open_parenthesis_syntax.cpp  open_parenthesis_syntax.hpp  operator_syntax.cpp  operator_syntax.hpp  parenthesis_expression_syntax.cpp  parenthesis_expression_syntax.hpp  parser.cpp  parser.hpp  syntax_fact.cpp  syntax_fact.hpp  syntax_kind.cpp  syntax_kind.hpp  (+17 more)
src/text/: text_line.cpp  text_line.hpp  text_source.cpp  text_source.hpp  text_span.cpp  text_span.hpp
